--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -10,6 +10,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>controller</artifactId>
+  <version>1.0</version>
 
   <dependencies>
     <dependency>
@@ -30,6 +31,11 @@
     <dependency>
       <groupId>com.example</groupId>
       <artifactId>core-new</artifactId>
+      <version>${parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.example</groupId>
+      <artifactId>common</artifactId>
       <version>${parent.version}</version>
     </dependency>
   </dependencies>
