--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<module>core</module>
 		<module>core-legacy</module>
 		<module>core-new</module>
+		<module>core-stock</module>
 	</modules>
 
 	<parent>
