Stock sample IN PROGRESS 1

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <module>core</module>
     <module>core-legacy</module>
     <module>core-new</module>
+    <module>core-stock</module>
   </modules>
 
   <parent>
@@ -66,6 +67,14 @@
           <artifactId>junit-vintage-engine</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>de.flapdoodle.embed</groupId>
+      <artifactId>de.flapdoodle.embed.mongo</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-mongodb</artifactId>
     </dependency>
   </dependencies>
 
