--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
 
   <properties>
     <java.version>14</java.version>
+    <mapstruct.version>1.4.2.Final</mapstruct.version>
+    <lombok.version>1.18.22</lombok.version>
   </properties>
 
   <dependencies>
