--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -12,6 +12,12 @@
   <artifactId>controller</artifactId>
   <name>store-api-controller</name>
 
+  <properties>
+    <swagger-annotations-version>2.1.11</swagger-annotations-version>
+    <springfox-version>2.9.2</springfox-version>
+    <jackson-databind-nullable>0.2.1</jackson-databind-nullable>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>com.example</groupId>
@@ -42,6 +48,25 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>${springfox-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openapitools</groupId>
+      <artifactId>jackson-databind-nullable</artifactId>
+      <version>${jackson-databind-nullable}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.swagger.core.v3</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>${swagger-annotations-version}</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -54,6 +79,32 @@
           <execution>
             <configuration>
               <mainClass>com.example.demo.MultipleCoreImplemSampleApplication</mainClass>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.openapitools</groupId>
+        <artifactId>openapi-generator-maven-plugin</artifactId>
+        <version>4.2.3</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <inputSpec>
+                ${project.basedir}/src/main/resources/openapi.yml
+              </inputSpec>
+              <generatorName>spring</generatorName>
+              <apiPackage>com.example.demo.controller.api</apiPackage>
+              <modelPackage>com.example.demo.controller.dto</modelPackage>
+              <supportingFilesToGenerate>
+                ApiUtil.java
+              </supportingFilesToGenerate>
+              <configOptions>
+                <delegatePattern>true</delegatePattern>
+              </configOptions>
             </configuration>
           </execution>
         </executions>
