--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
               <version>${mapstruct.version}</version>
             </path>
           </annotationProcessorPaths>
+          <compilerArgs>
+            <compilerArg>
+              -Amapstruct.defaultComponentModel=spring
+            </compilerArg>
+          </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
