Modify project syntax for Java 11 and Maven 3 Fix missing implementation module

--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -15,23 +15,23 @@
     <dependency>
       <groupId>com.example</groupId>
       <artifactId>dto</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <groupId>com.example</groupId>
       <artifactId>core</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
     </dependency>
-    <dependency>
-      <groupId>com.example</groupId>
-      <artifactId>core-legacy</artifactId>
-      <version>${parent.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.example</groupId>
-      <artifactId>core-new</artifactId>
-      <version>${parent.version}</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>com.example</groupId>-->
+<!--      <artifactId>core-legacy</artifactId>-->
+<!--      <version>${project.parent.version}</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>com.example</groupId>-->
+<!--      <artifactId>core-new</artifactId>-->
+<!--      <version>${project.parent.version}</version>-->
+<!--    </dependency>-->
   </dependencies>
 
   <build>
