--- a/dto/pom.xml
+++ b/dto/pom.xml
@@ -12,4 +12,13 @@
   <artifactId>dto</artifactId>
 
 
+  <dependencies>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>entity</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+  </dependencies>
+
 </project>
