Restore sample modules as in Github

--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -22,16 +22,16 @@
       <artifactId>core</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>com.example</groupId>-->
-<!--      <artifactId>core-legacy</artifactId>-->
-<!--      <version>${project.parent.version}</version>-->
-<!--    </dependency>-->
-<!--    <dependency>-->
-<!--      <groupId>com.example</groupId>-->
-<!--      <artifactId>core-new</artifactId>-->
-<!--      <version>${project.parent.version}</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>com.example</groupId>
+      <artifactId>core-legacy</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.example</groupId>
+      <artifactId>core-new</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
