Add mapping of DTO and Entity

--- a/dto/pom.xml
+++ b/dto/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>demo</artifactId>
     <groupId>com.example</groupId>
@@ -11,6 +11,9 @@
 
   <artifactId>dto</artifactId>
 
+  <properties>
+    <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -18,7 +21,16 @@
       <artifactId>entity</artifactId>
       <version>${project.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct</artifactId>
+      <version>${org.mapstruct.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct-processor</artifactId>
+      <version>${org.mapstruct.version}</version>
+    </dependency>
   </dependencies>
 
 </project>
