--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -32,6 +32,10 @@
       <artifactId>core-new</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.java-json-tools</groupId>
+      <artifactId>json-patch</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
