--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,6 +16,10 @@
       <artifactId>dto</artifactId>
       <version>1.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.java-json-tools</groupId>
+      <artifactId>json-patch</artifactId>
+    </dependency>
   </dependencies>
 
 
