--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -36,6 +36,11 @@
       <groupId>com.github.java-json-tools</groupId>
       <artifactId>json-patch</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>1.5.13</version>
+    </dependency>
   </dependencies>
 
   <build>
