--- a/controller/src/main/resources/application.properties
+++ b/controller/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
+springdoc.swagger-ui.path= /swagger-ui/stock.html
