--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
   <properties>
     <java.version>14</java.version>
     <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
+    <org.springdoc.version>1.6.8</org.springdoc.version>
   </properties>
 
   <dependencies>
@@ -51,11 +52,6 @@
       <artifactId>spring-boot-devtools</artifactId>
       <scope>runtime</scope>
       <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.hsqldb</groupId>
-      <artifactId>hsqldb</artifactId>
-      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
