--- a/pom.xml
+++ b/pom.xml
@@ -57,11 +57,11 @@
       <!--version>1.18.22</version-->
       <optional>true</optional>
     </dependency>
-    <dependency>
+    <!--dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
-    </dependency>
+    </dependency-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
